--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "lint-staged --allow-empty"
+    "lint": "lint-staged --allow-empty",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@antv/g6": "^4.8.4",
